database/dev/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: application-database
  namespace: "application-dev"
  labels:
    verion: "8.0.31"
    type: "sql"
    purpose: "application-data"
    stage: "dev"
spec:
  replicas: 1
  selector:
    matchLabels:
      version: "8.0.31"
      type: "sql"
      purpose: "application-data"
      stage: "dev"
  serviceName: "app-db-dev-svc"
  template:
    metadata:
      labels:
        version: "8.0.31"
        type: "sql"
        purpose: "application-data"
        stage: "dev"
    spec:
      containers:
        - name: "app-db-dev"
          image: "mysql:8.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - name: "app-db-dev-port"
              containerPort: 3306
              protocol: "TCP"
          volumeMounts:
            - name: "db-dev-volume"
              mountPath: "/var/lib/mysql"
      volumes:
        - name: "db-dev-volume"
          persistentVolumeClaim:
            claimName: "db-dev-pvc-0"
