database/dev/db-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-client
  namespace: application-dev
  labels:
    app: db-client
spec:
  selector:
    matchLabels:
      app: db-client
  template:
    metadata:
      labels:
        app: db-client
    spec:
      containers:
        - name: db-client
          image: phpmyadmin
          imagePullPolicy: IfNotPresent
          ports:
            - name: db-client-port
              containerPort: 80
              protocol: "TCP"
          readinessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 1
            successThreshold: 1
            timeoutSeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 1
            successThreshold: 1
            timeoutSeconds: 5
            periodSeconds: 5
